fix: Make background transparent to display abastract image

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     border-right-color: transparent;
     animation: 2s infinite linear spinner;
   }
-  
+
   .preloader:nth-last-of-type(2) {
     border-left-color: transparent;
     border-top-color: transparent;
@@ -75,6 +75,7 @@
 
   #root.visible {
     opacity: 1;
+    background-color: transparent;
     transform: translate3d(0, 0, 0);
   }
 
